fixed user feed css so doesn't overflow

--- a/dxm/static/css/feed.css
+++ b/dxm/static/css/feed.css
@@ -270,6 +270,7 @@
 
 
 .user img {
+  float: left;
   padding: 6px;
   vertical-align: middle;
   height: 48px;
